tests/fixtures/typecheck/invalid/unknown_verb.sr
rule "EQ: Unknown Verb" in underlying:
    when true:
        then do_magic(note="nope")
